# obsidian-mneme

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: gpu-backend-evaluation.md  gpu-benchmark-results.md
docs/release-notes/: v0.3.1.md
docs/superpowers/plans/: 2026-04-16-gpu-support.md  2026-04-16-phase1-mvp.md  2026-04-19-integration-hotfix-sprint.md  2026-04-28-ci-hf-cache.md
docs/superpowers/specs/: 2026-04-16-gpu-support-design.md  2026-04-16-mneme-design.md  2026-04-19-auto-link-on-create-design.md  2026-04-19-cluster-inbox-design.md  2026-04-19-duplikat-warnung-design.md  2026-04-19-health-report-actionable-design.md  2026-04-19-projekt-kontext-bundle-design.md  2026-04-19-session-kontext-restore-design.md  2026-04-19-wissens-delta-report-design.md  obsidian-plugin-design.md
docs/testing/: 2026-04-18-mcp-live-test-report.md  screenshot-todo.md
obsidian-plugin/: README.md  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  vitest.config.mjs
obsidian-plugin/src/: health-modal.ts  main.ts  mneme-client.ts  search-view.ts  settings.ts  status-bar.ts  types.ts
obsidian-plugin/tests/: debounce.test.ts  mneme-path-guard.test.ts  probe-health.test.ts
obsidian-plugin/tests/stubs/: obsidian.ts
scripts/: bench_int8_directml.py  bench_single.py  benchmark.py  benchmark_gpu.py  debug_hang.py  eval_comparison.py  eval_final.py  install-autostart-windows.ps1  make_screenshot_placeholders.py  test_both_models.py  test_reranker_gpu.py  test_search_debug.py  uninstall-autostart-windows.ps1  verify_provider_parity.py
src/mneme/: __init__.py  __main__.py  _torch_compat.py  auto_search.py  cli.py  config.py  eval.py  gardener.py  hooks.py  indexer.py  parser.py  paths.py  reranker.py  search.py  server.py  store.py  watcher.py
src/mneme/embeddings/: __init__.py  base.py  onnx_provider.py  raw_transformers.py  sentence_transformers.py
tests/: golden_dataset.json  test_auto_search.py  test_cli.py  test_cli_serve_hardening.py  test_config.py  test_embeddings.py  test_eval.py  test_gardener.py  test_gars.py  test_graph.py  test_hooks.py  test_indexer.py  test_integration.py  test_onnx_provider.py  test_parser.py  test_paths.py  test_raw_transformers_provider.py  test_reranker.py  test_search.py  test_server.py  test_server_http.py  test_store.py  test_watcher.py
