[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneme"
version = "0.2.0"
description = "Local MCP server for semantic Obsidian vault search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "André Sagasser", email = "andresagasser@gmail.com"}]
keywords = ["obsidian", "mcp", "rag", "semantic-search", "vault"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]",
    "sentence-transformers",
    "sqlite-vec",
    "pydantic-settings>=2.0",
    "click",
    "watchdog",
    "pyyaml",
    "platformdirs",
    "tomli-w",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17", "transformers", "huggingface-hub"]
directml = ["onnxruntime-directml>=1.17", "transformers", "huggingface-hub"]
cuda = ["onnxruntime-gpu>=1.17", "transformers", "huggingface-hub"]

[project.urls]
Homepage = "https://github.com/MakaveliGER/mneme"
Repository = "https://github.com/MakaveliGER/mneme"
Issues = "https://github.com/MakaveliGER/mneme/issues"

[project.scripts]
mneme = "mneme.cli:cli_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/mneme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that load ML models (deselect with '-m \"not slow\"')",
]
